# otus--githubworflow--helloworld

./: CMakeLists.txt  main.cpp  test.py
.github/workflows/: main.yml  release.yml
